src/Css-Pages/Navbr.css
.nav-item {
  position: relative;
  margin-right: 20px;
}

.nav-item ul {
  padding: 8px;
}
.nav-item:hover .dropdown-menu {
  display: flex;
}

.navbar {
  --bs-navbar-padding-x: none !important;
}

.navbar-nav {
  --bs-navbar-nav-link-padding-x: none !important;
}
.nav-link {
  text-decoration: none;
  color: #333;
}

.dropdown-menu {
  top: 100%;
  display: flex;
  justify-content: space-around;
  margin-top: -1px !important;
  left: 0 !important;
  gap: 10px;
  position: absolute;
  background: linear-gradient(#dce6ec, white) !important;
  z-index: 1000;
}
.dropdown-menu ul {
  padding-left: 0px;
}

.dropdown-menu li {
  list-style: none;
  padding: 8px 0px 8px 0px;
  width: auto;
}

.dropdown-menu li a {
  display: block;
  text-decoration: none;
  color: #333;
  font-size: small;
  font-size: 20px !important;
  font-size: large;
  padding-left: -0px !important;
  margin-left: 8px;
}

.dropdown-menu li a:hover {
  color: red;
}

